After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 697886 - dnd icon drawing broken on master
dnd icon drawing broken on master
Status: RESOLVED FIXED
Product: gtk+
Classification: Platform
Component: Widget: Other
unspecified
Other Linux
: Normal normal
: ---
Assigned To: gtk-bugs
gtk-bugs
Depends on:
Blocks:
 
 
Reported: 2013-04-12 15:25 UTC by Matthias Clasen
Modified: 2013-04-13 02:50 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Matthias Clasen 2013-04-12 15:25:14 UTC
I just get a flat gray outline.

I suspect that the content_window changes are involved, this is master-only breakage.