csd: Don't use a content_window for o-r windows

This fixes drawing of dnd icons.
https://bugzilla.gnome.org/show_bug.cgi?id=697886